==> feaser/openblt/Target/Demo/ARMCM4_STM32F4_Olimex_STM32P405_IAR/Boot/lib/fatfs/mmc.c <==
#include "diskio.h"
#include "stm32f4xx.h"                           /* STM32 registers and drivers        */
#include "stm32f4xx_ll_bus.h"                    /* STM32 LL BUS header                */
#include "stm32f4xx_ll_gpio.h"                   /* STM32 LL GPIO header               */
#include "stm32f4xx_ll_spi.h"                    /* STM32 LL SPI header                */
#include "boot.h"
#define CT_MMC		0x01		/* MMC ver 3 */
#define CT_SD1		0x02		/* SD ver 1 */
#define CT_SD2		0x04		/* SD ver 2 */
#define CT_SDC		(CT_SD1|CT_SD2)	/* SD */
#define CT_BLOCK	0x08		/* Block addressing */
#define CMD0   (0)			/* GO_IDLE_STATE */
#define CMD1   (1)			/* SEND_OP_COND */
#define ACMD41 (41|0x80)	/* SEND_OP_COND (SDC) */
#define CMD8   (8)			/* SEND_IF_COND */
#define CMD9   (9)			/* SEND_CSD */
#define CMD10  (10)			/* SEND_CID */
#define CMD12  (12)			/* STOP_TRANSMISSION */
#define ACMD13 (13|0x80)	/* SD_STATUS (SDC) */
#define CMD16  (16)			/* SET_BLOCKLEN */
#define CMD17  (17)			/* READ_SINGLE_BLOCK */
#define CMD18  (18)			/* READ_MULTIPLE_BLOCK */
#define CMD23  (23)			/* SET_BLOCK_COUNT */
#define ACMD23 (23|0x80)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24  (24)			/* WRITE_BLOCK */
#define CMD25  (25)			/* WRITE_MULTIPLE_BLOCK */
#define CMD41  (41)			/* SEND_OP_COND (ACMD) */
#define CMD55  (55)			/* APP_CMD */
#define CMD58  (58)			/* READ_OCR */
#define CS_LOW()	  LL_GPIO_ResetOutputPin(GPIOB, LL_GPIO_PIN_12)  /* MMC CS = L */

static
void send_initial_clock_train(void)
{
  LL_GPIO_InitTypeDef GPIO_InitStruct;
  unsigned int i;
  DWORD timeoutTime;

  /* Ensure CS is held high. */
  CS_HIGH();

  /* Switch the SSI TX line to a GPIO and drive it high too. */
  GPIO_InitStruct.Pin = LL_GPIO_PIN_15;
  GPIO_InitStruct.Mode = LL_GPIO_MODE_OUTPUT;
  GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_HIGH;
  GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
  GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
  LL_GPIO_Init(GPIOB, &GPIO_InitStruct);
  LL_GPIO_SetOutputPin(GPIOB, LL_GPIO_PIN_15);

  /* Send 10 bytes over the SSI. This causes the clock to wiggle the */
  /* required number of times. */
  for(i = 0 ; i < 10 ; i++)
  {
    /* Set timeout time to wait for DR register empty */
    timeoutTime = TimerGet() + 100;
    /* Loop while DR register in not empty */
    while (LL_SPI_IsActiveFlag_TXE(SPI2) == 0)
    {
      /* Break wait loop upon timeout */
      if (TimerGet() > timeoutTime)
      {
        break;
      }
    }

    /* Send byte through the SPI peripheral */
    LL_SPI_TransmitData8(SPI2, 0xff);

    /* Set timeout time to wait for byte reception */
    timeoutTime = TimerGet() + 100;
    /* Wait to receive a byte */
    while (LL_SPI_IsActiveFlag_RXNE(SPI2) == 0)
    {
      /* Break wait loop upon timeout */
      if (TimerGet() > timeoutTime)
      {
        break;
      }
    }
  }

  /* Revert to hardware control of the SSI TX line. */
  GPIO_InitStruct.Pin = LL_GPIO_PIN_15;
  GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
  GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_VERY_HIGH;
  GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
  GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
  GPIO_InitStruct.Alternate = LL_GPIO_AF_5;
  LL_GPIO_Init(GPIOB, &GPIO_InitStruct);
}

static
void power_on (void)
{
  LL_SPI_InitTypeDef  SPI_InitStruct;
  LL_GPIO_InitTypeDef GPIO_InitStruct;

  /*
   * This doesn't really turn the power on, but initializes the
   * SSI port and pins needed to talk to the card.
   */
  /* Enable SPI and GPIO peripheral clocks. */
  LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOB);
  LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_SPI2);

  /* Configure I/O for Chip select (PB12) */
  GPIO_InitStruct.Pin = LL_GPIO_PIN_12;
  GPIO_InitStruct.Mode = LL_GPIO_MODE_OUTPUT;
  GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_HIGH;
  GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
  GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
  LL_GPIO_Init(GPIOB, &GPIO_InitStruct);

  /* De-select the Card: Chip Select high */
  LL_GPIO_SetOutputPin(GPIOB, LL_GPIO_PIN_12);

  /* Configure SPI pins: SCK (PB13), MOSI (PB15) and MISO (PB14) */
  GPIO_InitStruct.Pin = LL_GPIO_PIN_13|LL_GPIO_PIN_14|LL_GPIO_PIN_15;
  GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
  GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_VERY_HIGH;
  GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
  GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
  GPIO_InitStruct.Alternate = LL_GPIO_AF_5;
  LL_GPIO_Init(GPIOB, &GPIO_InitStruct);

  /* SPI2 parameter configuration */
  SPI_InitStruct.TransferDirection = LL_SPI_FULL_DUPLEX;
  SPI_InitStruct.Mode = LL_SPI_MODE_MASTER;
  SPI_InitStruct.DataWidth = LL_SPI_DATAWIDTH_8BIT;
  SPI_InitStruct.ClockPolarity = LL_SPI_POLARITY_LOW;
  SPI_InitStruct.ClockPhase = LL_SPI_PHASE_1EDGE;
  SPI_InitStruct.NSS = LL_SPI_NSS_SOFT;
  SPI_InitStruct.BaudRate = LL_SPI_BAUDRATEPRESCALER_DIV128; // 168MHz/4/128=328kHz < 400kHz
  SPI_InitStruct.BitOrder = LL_SPI_MSB_FIRST;
  SPI_InitStruct.CRCCalculation = LL_SPI_CRCCALCULATION_DISABLE;
  SPI_InitStruct.CRCPoly = 7;
  LL_SPI_Init(SPI2, &SPI_InitStruct);
  LL_SPI_SetStandard(SPI2, LL_SPI_PROTOCOL_MOTOROLA);
  LL_SPI_Enable(SPI2);

  /* Set DI and CS high and apply more than 74 pulses to SCLK for the card */
  /* to be able to accept a native command. */
  send_initial_clock_train();
}

static
void set_max_speed(void)
{
  LL_SPI_InitTypeDef  SPI_InitStruct;

  /* Disable the SPI system */
  LL_SPI_Disable(SPI2);

  /* MMC/SDC can work at the clock frequency up to 20/25MHz so pick a speed close to
   * this but not higher
   */
  SPI_InitStruct.TransferDirection = LL_SPI_FULL_DUPLEX;
  SPI_InitStruct.Mode = LL_SPI_MODE_MASTER;
  SPI_InitStruct.DataWidth = LL_SPI_DATAWIDTH_8BIT;
  SPI_InitStruct.ClockPolarity = LL_SPI_POLARITY_LOW;
  SPI_InitStruct.ClockPhase = LL_SPI_PHASE_1EDGE;
  SPI_InitStruct.NSS = LL_SPI_NSS_SOFT;
  SPI_InitStruct.BaudRate = LL_SPI_BAUDRATEPRESCALER_DIV4; // 168MHz/4/4=10.5MHz < 25MHz
  SPI_InitStruct.BitOrder = LL_SPI_MSB_FIRST;
  SPI_InitStruct.CRCCalculation = LL_SPI_CRCCALCULATION_DISABLE;
  SPI_InitStruct.CRCPoly = 7;
  LL_SPI_Init(SPI2, &SPI_InitStruct);
  LL_SPI_SetStandard(SPI2, LL_SPI_PROTOCOL_MOTOROLA);
  LL_SPI_Enable(SPI2);
}

static
BYTE xchg_spi (BYTE dat)
{
  BYTE result = 0;
  DWORD timeOutTime;
  BYTE timeoutDetected = 0;

  /* Send byte through the SPI peripheral */
  LL_SPI_TransmitData8(SPI2, dat);

  /* Set timeout for 50 ms from now */
  timeOutTime = TimerGet() + 50;

  /* Wait to receive a byte with timeout */
  while (LL_SPI_IsActiveFlag_RXNE(SPI2) == 0)
  {
    /* Service the watchdog */
    CopService();

    /* Check for timeout */
    if (TimerGet() > timeOutTime)
    {
      /* Set flag to remember that a timeout occurred and nothing was received */
      timeoutDetected = 1;
      /* Stop waiting */
      break;
    }
  }

  /* Read the value of the received byte */
  if (timeoutDetected == 0)
  {
    result = LL_SPI_ReceiveData8(SPI2);
  }

  /* Give the result back to the caller */
  return result;
}
